# Snapdragin

./: Cargo.toml  DESIGN.md  README.md  SOURCES.md  app.rc  build.rs
crates/bettersnap-core/: Cargo.toml  README.md
crates/bettersnap-core/src/: grid.rs  lib.rs  selection.rs
crates/bettersnap-platform/: Cargo.toml  README.md
crates/bettersnap-platform/src/: lib.rs
crates/bettersnap-windows/: Cargo.toml  README.md  build.rs
crates/bettersnap-windows/src/: main.rs  windows_app.rs
src/: main.rs
src/core/: geometry.rs  grid.rs  mod.rs  selection.rs
src/windows/: app.rs  mod.rs  win32.rs
src/windows/app/: desktop.rs  drag.rs  mod.rs  overlay.rs  runtime.rs  settings_store.rs  settings_window.rs  snap.rs  state.rs  tray.rs
src/windows/app/settings/: color.rs  controls.rs  mod.rs  paint.rs  startup.rs  storage.rs  window.rs
