[package]
name = "BetterSnap"
description = "Windows desktop app for Snapdragin'."
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
build = "build.rs"

[[bin]]
name = "BetterSnap"
path = "src/main.rs"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }
