[package]
name = "bettersnap-platform"
description = "Platform abstraction traits for Snapdragin' OS backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bettersnap-core = { path = "../bettersnap-core" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
