[package]
name = "bettersnap-windows"
description = "Windows desktop app for Snapdragin'."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
bettersnap-core = { path = "../bettersnap-core" }

[[bin]]
name = "snapdragin"
path = "src/main.rs"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }
